changes to compile against foundation